Fixed color contrast errors

--- a/styles/prophets.css
+++ b/styles/prophets.css
@@ -17,7 +17,7 @@ body {
 
 /* Header styles */
 header {
-    background-color: #2e86ab;
+    background-color: #1E5B76;
     color: white;
     padding: 20px;
     text-align: center;
@@ -78,7 +78,7 @@ section img {
 
 /* Footer styles */
 footer {
-    background-color: #2e86ab;
+    background-color: #1E5B76;
     color: white;
     text-align: center;
     padding: 16px;
